--- a/Grup17_Vilar_Mateu_AA2/Grup17_Vilar_Mateu_AA2.vcxproj.filters
+++ b/Grup17_Vilar_Mateu_AA2/Grup17_Vilar_Mateu_AA2.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="Constants.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
+    <ClInclude Include="Enemies.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
@@ -36,6 +39,9 @@
       <Filter>Archivos de recursos</Filter>
     </ClCompile>
     <ClCompile Include="Player.cpp">
+      <Filter>Archivos de recursos</Filter>
+    </ClCompile>
+    <ClCompile Include="Enemies.cpp">
       <Filter>Archivos de recursos</Filter>
     </ClCompile>
   </ItemGroup>
