AA2_03 maquina d'estats i correccions fetes

--- a/Grup17_Vilar_Mateu_AA2/Grup17_Vilar_Mateu_AA2.vcxproj
+++ b/Grup17_Vilar_Mateu_AA2/Grup17_Vilar_Mateu_AA2.vcxproj
@@ -117,6 +117,7 @@
   <ItemGroup>
     <ClInclude Include="Constants.h" />
     <ClInclude Include="Enemies.h" />
+    <ClInclude Include="EnemyClasses.h" />
     <ClInclude Include="Map.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Types.h" />
