--- a/Grup17_Vilar_Mateu_AA2/Grup17_Vilar_Mateu_AA2.vcxproj.filters
+++ b/Grup17_Vilar_Mateu_AA2/Grup17_Vilar_Mateu_AA2.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="Enemies.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
+    <ClInclude Include="EnemyClasses.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
