--- a/Grup17_Vilar_Mateu_AA2/Grup17_Vilar_Mateu_AA2.vcxproj
+++ b/Grup17_Vilar_Mateu_AA2/Grup17_Vilar_Mateu_AA2.vcxproj
@@ -120,6 +120,7 @@
     <ClInclude Include="EnemyClasses.h" />
     <ClInclude Include="Map.h" />
     <ClInclude Include="Player.h" />
+    <ClInclude Include="Ranking.h" />
     <ClInclude Include="Types.h" />
   </ItemGroup>
   <ItemGroup>
@@ -127,6 +128,7 @@
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Map.cpp" />
     <ClCompile Include="Player.cpp" />
+    <ClCompile Include="Ranking.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
