--- a/Grup17_Vilar_Mateu_AA2/Grup17_Vilar_Mateu_AA2.vcxproj.filters
+++ b/Grup17_Vilar_Mateu_AA2/Grup17_Vilar_Mateu_AA2.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="EnemyClasses.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
+    <ClInclude Include="Ranking.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
@@ -45,6 +48,9 @@
       <Filter>Archivos de recursos</Filter>
     </ClCompile>
     <ClCompile Include="Enemies.cpp">
+      <Filter>Archivos de recursos</Filter>
+    </ClCompile>
+    <ClCompile Include="Ranking.cpp">
       <Filter>Archivos de recursos</Filter>
     </ClCompile>
   </ItemGroup>
